# trifunctors

./: .gitignore  LICENSE  README.md  package.yaml  trifunctors.cabal
.github/workflows/: haskell.yml
src/: Lib.hs
src/Data/: Trifunctor.hs  UnifyBifunctorProfunctor.hs  Zifunctor.hs
test/: Spec.hs
