cabal-version: 1.12

name:           trifunctors
category:       Control
version:        0.0.1
description:    Please see the README on GitHub at <https://github.com/lemastero/trifunctors#readme>
homepage:       https://github.com/lemastero/trifunctors#readme
bug-reports:    https://github.com/lemastero/trifunctors/issues
author:         Piotr Paradzinski - lemastero
maintainer:     Piotr Paradzinski <piotr.paradzinski@gmail.com>
copyright:      BSD
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    .gitignore
    README.md

source-repository head
  type: git
  location: https://github.com/lemastero/trifunctors

library
  exposed-modules:
    Data.Zifunctor
    Data.UnifyBifunctorProfunctor
  hs-source-dirs:  src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite trifunctors-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_trifunctors
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , trifunctors
    , hspec
  default-language: Haskell2010
